<?xml version="1.0"?>
<package format="2">
  <name>robot_gazebo</name>
  <version>0.0.1</version>
  <description>The robot_gazebo package</description>

  <maintainer email="iseeutheday@gmail.com">Jian Wang</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <export>


  </export>
</package>
